--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <p>
           Cada momento a tu lado es un bonito recuerdo que guardo en mi corazón.
         </p>
-        <p>Eres todo para mi, mi polancoas, mi amorcito</p>
+        <p>Eres todo para mi, mi corazon, mi amorcito</p>
         <p class="signature">Te amo</p>
       </div>
 
@@ -409,3 +409,4 @@
     </script>
   </body>
 </html>
+
